# Python-files

./: CalculatorVersion3.py  Leap Year.py  Matplotlib_module_guide_with_all_functions.txt  desktop.ini  ex[.py  math_module_guide_with_all_functions.txt  module checking.py  new.py  text_extraction.py  website_details.py  website_html_view.py
CyberBrain/: new.py
EEl_python/: main.py  server.py
Graph Animation/: waves.py
Mathematics/: A.P..py  Exp.py  G.P..py  Graph_plotter.py  LCM.py  calc.py  calculator.py  factor_finder_for_a_number.py  finding_area_of_a_circle.py  modulo.py  modulo_2.0.py  number_of_terms_in_AP.py  prime_factor_list_finder.py  prime_factorisation.py  prime_factors_of_a_number.py  prime_new_style.py  table_finder.py  whether_prime_or_not.py
Project_Dictionary/: Dictionary.pyw  ctrl_leftbut.ahk  ctrl_leftbut_for_exe - Copy.ahk  ctrl_leftbut_for_exe.ahk
Python-Github/: CalculatorVersion3.py  CalculatorVersion4.py  CalculatorVersion5alpha.py  CalculatorVersion5stable.py
School Practicals/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  08_new.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  16_easy_way.py  17.py  18.py  19.py  20.py  21.py  22.py  README.md  exp_list.py  new.py
Themes/: config-highlight.cfg  config-main.cfg
modules/: LICENSE  setup.cfg
modules/src/example_package/: Mensuration.py  variables.py
modules/src/mensuration_package.egg-info/: PKG-INFO  SOURCES.txt
pyAutoGUI/: auto_scroll - Copy.py  auto_scroll.py  automatic_drawing.py  fast_typing.py  gui_automation.py  pipautogui_module_install.py
(+39 files in other folders)
